syntax = "proto3";

package verification.attestation;

//message InternalError {
//  string message = 1;
//}
//
//message InvalidAttestationReport {}
//message InvalidNonce {}
//
//message AttestationError {
//  string message = 1;
//
//  oneof error {
//    InternalError internal = 2;
//    InvalidAttestationReport invalid_attestation_report = 3;
//    InvalidNonce invalid_nonce = 4;
//  }
//}
//
//message GenerateAttestationTokenChallenge {
//  bytes nonce = 1;
//}
//
//message InitiateGenerateAttestationTokenRequest {
//  bytes chip_id = 1;
//}
//
//message InitiateGenerateAttestationTokenResponse {
//  GenerateAttestationTokenChallenge challenge = 1;
//}
//
//message GenerateAttestationTokenRequest {
//  bytes tls_public_key = 1;
//  bytes nonce = 2;
//  bytes sev_attestation_report = 3;
//}
//
//message GenerateAttestationTokenResponse {
//
//}

message SevAttestationPackage {
  // Opaque bytes containing the SEV attestation report. Can be parsed using
  // sev::firmware::guest::AttestationReport::from_bytes.
  optional bytes attestation_report = 1;
  optional SevCertificateChain certificate_chain = 2;
}

message SevCertificateChain {
  // AMD Root Key (ARK) certificate in PEM encoding
  optional bytes ark_pem = 1;
  // AMD SEV Signing Key (ASK) certificate in PEM encoding
  optional bytes ask_pem = 2;
  // Versioned Chip Endorsement Key (VCEK) certificate in PEM encoding
  optional bytes vcek_pem = 3;
}
